--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,8 @@ body {
 
 /*HEADER STYLING BEGIN*/
 header {
-    padding: 20px;
+    padding: 0 20px;
+    background-image: linear-gradient(to right, #420000, #280E20, #161A35);
 }
 
 header h1{
@@ -26,19 +27,67 @@ header nav {
     font-size: 20px;
 }
 
-header nav div {
+header nav div, a {
     padding: 10px;
+}
+
+/*DROPDOWN STYLING BEGIN*/
+.dropbtn {
+    font-size: 24px;
+    border: none;
 }
 
 .dropdown {
     position: relative;
     display: inline-block;
 }
+
+.dropdown-content {
+    display: none;
+    font-size: 16px;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 0px 0px 0px white;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+/*DROPDOWN STYLING END*/
 /*HEADER STYLING END*/
 
 /*HERO STYLING BEGIN*/
 
+#about-me {
+    position: relative;
+    color: whitesmoke;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#about-vid {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+}
+
 /*HERO STYLING END*/
+
+/*PROJECT STYLING BEGIN*/
+
+/*PROJECT STYLING END*/
 
 /*CONTACT STYLING BEGIN*/
 /*CONTACT STYLING END*/
@@ -53,5 +102,20 @@ header nav div {
 
 .font-secondary {
     font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+}
+
+.neon-text {
+    color: #E20D21;
+    text-shadow:
+        /*WHITE GLOW*/
+        0 0 7px #fff
+        0 0 10px #fff
+        0 0 21px #fff
+        /*COLOR GLOW*/
+        0 0 42px #ee2356
+        0 0 82px #ee2356
+        0 0 92px #ee2356
+        0 0 102px #ee2356
+        0 0 151px #ee2356
 }
 /*UTILITY STYLES END*/
