--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,21 @@
 }
 
 body {
+    background-color: thistle;
+    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+}
 
+a {
+    color: whitesmoke;
+    text-decoration: none;
 }
 
 /*HEADER STYLING BEGIN*/
 header {
-    padding: 0 20px;
-    background-image: linear-gradient(to right, #420000, #280E20, #161A35);
+    position: relative;
+    background-color: black;
+    color: whitesmoke;
+
 }
 
 header h1{
@@ -27,13 +35,16 @@ header nav {
     font-size: 20px;
 }
 
-header nav div, a {
-    padding: 10px;
+header a {
+    padding: 0 40px;
+    font-size: 24px;
+    text-align: center;
 }
 
 /*DROPDOWN STYLING BEGIN*/
 .dropbtn {
-    font-size: 24px;
+    background-color: inherit;
+    margin-top: 16px;
     border: none;
 }
 
@@ -44,78 +55,45 @@ header nav div, a {
 
 .dropdown-content {
     display: none;
-    font-size: 16px;
     position: absolute;
-    min-width: 160px;
+    background-color: inherit;
+    min-width: 100px;
     box-shadow: 0px 0px 0px 0px white;
     z-index: 1;
+    font-size: 10px;
 }
 
 .dropdown-content a {
-    color: black;
-    text-decoration: none;
     display: block;
+    color: whitesmoke;
+    font-size: 16px;
+    text-decoration: none;
 }
 
 .dropdown:hover .dropdown-content{
     display: block;
 }
+
+header a:hover, .dropdown:hover .dropbtn {
+    color: aquamarine;
+}
 /*DROPDOWN STYLING END*/
 /*HEADER STYLING END*/
 
 /*HERO STYLING BEGIN*/
-
 #about-me {
     position: relative;
+    background-image: url("../images/about-bkrd.png");
     color: whitesmoke;
-    height: 100vh;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-#about-vid {
-    object-fit: cover;
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-}
-
 /*HERO STYLING END*/
-
-/*PROJECT STYLING BEGIN*/
-
-/*PROJECT STYLING END*/
-
-/*CONTACT STYLING BEGIN*/
-/*CONTACT STYLING END*/
-
-/*FOOTER STYLING BEGIN*/
-/*FOOTER STYLING END*/
 
 /*UTILITY STYLES BEGIN*/
 .font-primary {
     font-family: montserrat, Nunito, public sans, sans-serif;
-}
-
-.font-secondary {
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-}
-
-.neon-text {
-    color: #E20D21;
-    text-shadow:
-        /*WHITE GLOW*/
-        0 0 7px #fff
-        0 0 10px #fff
-        0 0 21px #fff
-        /*COLOR GLOW*/
-        0 0 42px #ee2356
-        0 0 82px #ee2356
-        0 0 92px #ee2356
-        0 0 102px #ee2356
-        0 0 151px #ee2356
 }
 /*UTILITY STYLES END*/
